Fix spacing issues

--- a/src/css/global/layout.scss
+++ b/src/css/global/layout.scss
@@ -1,8 +1,8 @@
 main {
-  padding: 24px 0;
+  padding-top: 24px;
 
   @media #{$mq-md} {
-    padding: 40px 0;
+    padding-top: 40px;
   }
 
   &.has-header {
